[metadata]
name             = screen-commander
version          = 0.1.0
summary          = A tool to run commands in multiple terminals
description_file = README.md
author           = Horst Dumcke
author_email     = hdumcke@marlysys.com
home_page        = https://github.com/hdumcke/screen-commander

[files]
packages         = screen_commander

[global]
setup_hooks      = pbr.hooks.setup_hook

[entry_points]
console_scripts  =
    screen-commander     = screen_commander.console.cli:screen_commander

[pbr]
autodoc_tree_index_modules = True
autodoc_index_modules      = True

[build_sphinx]
all_files       = 1
build-dir       = doc/build
source-dir      = doc/source

[wheel]
universal       = 1
